--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
       "Bear Travis <betravis@adobe.com>"
     ],
     "license": "MIT",
-    "categories": "editing",
+    "categories": [
+      "editing",
+      "livedev",
+      "visual"
+    ],
     "devDependencies": {
       "grunt": "~0.4.1",
       "grunt-contrib-jshint": "~0.6.3",
@@ -18,6 +22,7 @@
       "load-grunt-tasks": "~0.2.1"
     },
     "engines": {
-      "node": ">=0.8.0"
+      "node": ">=0.8.0",
+      "brackets": ">=0.38.0"
     }
 }
